src/snapshots/skribi__parse__test__addition.snap
---
source: src/parse.rs
expression: exit(1+2+3)
---
(
    exit((
          (
                (
                      1
                 ) + (
                      2
                 )
           ) + (
                3
           )
     ))
)
