src/snapshots/skribi__parse__test__multiplication.snap
---
source: src/parse.rs
expression: exit(1+2-3*2/1*5-0)
---
(
     exit((
           (
                 (1 + 2) - (
                       (
                             (3 * 2) / 1
                       ) * 5
                 )
           ) - 0
     ))
)
