src/snapshots/skribi__parse__test__parse_exit.snap
---
source: src/parse.rs
expression: "parse(tokens, src.len())"
---
Ok(FileTreeRoot { content: [Expression(FunctionCall(FunctionCall { name: exit, span: 0..6, arg: None }))], file: None })
