src/snapshots/skribi__parse__test__parse_skr_app.snap
---
source: src/parse.rs
expression: "parse(tokens, src.len())"
---
Ok(FileTreeRoot { content: [Deprecated(Deprecated { message: "skr_app should not be used", span: 0..7 })], file: None })
