src/snapshots/skribi__parse__test__substraction.snap
---
source: src/parse.rs
expression: exit(1+2-3+1-0)
---
(
    exit((
          (
                (
                      (
                            (
                                  1
                             ) + (
                                  2
                             )
                       ) - (
                            3
                       )
                 ) + (
                      1
                 )
           ) - (
                0
           )
     ))
)
